<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Einstellungen</string>
    <string name="answerA2">Eine Dummy Antwort</string>
    <string name="answerB2">Zweite Dummy Antwort</string>
    <string name="answerC2">Dritte Dummy Antwort</string>
    <string name="answerD2">Vierte Dummy Antwort</string>
    <string name="app_name">OSMI-Quiz</string>
    <string name="cancel">abbrechen</string>
    <string name="delete">Löschen</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="gameheadline">Spiel</string>
    <string name="gamemenu">Spiel Menü</string>
    <string name="login">Anmelden</string>
    <string name="logoFHB">Logo FHB</string>
    <string name="mail">E-Mail</string>
    <string name="mail2">Hans.Mustermann@abc.de</string>
    <string name="menu">Hauptmenü</string>
    <string name="name">Name:</string>
    <string name="name2">Mustermann</string>
    <string name="online">Online Spiel</string>
    <string name="passwort">Passwort</string>
    <string name="passwort2">Geheim</string>
    <string name="passwort3">Geheim</string>
    <string name="quest">Frage:</string>
    <string name="quest2">Was ist eine dummy Frage? Was ist eine dummy Frage? Was ist eine dummy Frage?</string>
    <string name="ranking">Hans Mustermann</string>
    <string name="register">Registrieren</string>
    <string name="special">Gewinnspiel</string>
    <string name="submit">Speichern</string>
    <string name="training">Training</string>
    <string name="vorname">Vorname:</string>
    <string name="vorname2">Hans</string>

</resources>
