<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StartActivity"
    android:background="@color/background"
    android:clickable="false">

    <ImageView
        android:id="@+id/logoFHB"
        android:layout_width="500dp"
        android:layout_height="400dp"
        android:contentDescription="@string/logoFHB"
        android:src="@drawable/logo_fhb"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/logoFHB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_design"
        android:text="@string/login"/>

    <Button
        android:id="@+id/training1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login"
        android:layout_marginTop="58dp"
        android:background="@drawable/button_design"
        android:text="@string/training"/>
</RelativeLayout>