<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/training2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@color/button"
        android:text="@string/training" />

    <Button
        android:id="@+id/spezial"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/training2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@color/button"
        android:text="@string/special" />

    <Button
        android:id="@+id/online"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/spezial"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@color/button"
        android:text="@string/online" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/online"
        android:layout_marginTop="100dp"
        android:background="@color/white">

    </FrameLayout>


</RelativeLayout>